add query in router links and modify login
