# swagger.json
@@ -93,7 +93,7 @@
                     {
                         "name": "id_token",
                         "in": "headers",
-                        "description": "id do usuario logado enviado pelo middleware na autenticação",
+                        "description": "id do usuario logado enviado pelo middleware na autenticação ao chamar o método",
                         "required": true
                     }
                 ],
@@ -124,7 +124,7 @@
                     {
                         "name": "id_token",
                         "in": "headers",
-                        "description": "id do usuario logado enviado pelo middleware na autenticação",
+                        "description": "id do usuario logado enviado pelo middleware na autenticação ao chamar o método",
                         "required": true
                     }
                 ],
@@ -155,6 +155,27 @@
                     },
                     "304": {
                         "description": "falha ao atualizar"
+                    }
+                }
+            }
+        },
+        "/user/delete":{
+            "delete":{
+                "summary":"deletar usuario",
+                "description": "deleta o usuario e todas os links relacionadas a ele",
+                "tags":["user"],
+                "parameters":[{
+                    "name": "id_token",
+                    "in":"headers",
+                    "description":"id do usuario logado enviado pelo middleware na autenticação ao chamar o método",
+                    "required": true
+                }],
+                "responses": {
+                    "200": {
+                        "description": "deletado com sucesso"
+                    },
+                    "304": {
+                        "description": "falha ao deletar"
                     }
                 }
             }
